spacing issues

--- a/components/AssistantSessionPage/AssistantSessionPage.module.css
+++ b/components/AssistantSessionPage/AssistantSessionPage.module.css
@@ -4,6 +4,5 @@
 }
 
 .sessionCode {
-    padding-top: 15px;
     text-align: center;
 }
